1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mime.el (mime-read-field): Use `plain' instead of `native' for
	third argument for `mime-decode-field-body'.

1999-02-18  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_5 from flim-1_12_1.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.2.

1999-02-18  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el (mel-ccl-encode-base64-generic): Shift timing for
	linebreak.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.1.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (ew-mime-update-field-decoder-cache): Do not refold
	field-body if encoded word decoding is identity.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Fix previous
	change.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Write white
	space after checking following sequence.

1999-01-20  Tanaka Akira      <akr@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Do not contain : in
	`original-field-name'.

1999-01-17  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-compat.el (ew-mime-update-field-decoder-cache): Abolished
	because duplicated.

	* mmgeneric.el (mime-insert-header-from-buffer): Convert LF to CRLF for
	`original-field-body'.

1999-01-05  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): Typo fix.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_1 from flim-1_11_3.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.1.

1999-01-04  Tanaka Akira      <akr@jaist.ac.jp>

	* ew-var.el (ew-decode-field-syntax-alist): Add `x-face-version',
	`x-pgp-sig-version', `x-pgp-key-info' and `x-info'.

1998-10-27  Tanaka Akira      <akr@jaist.ac.jp>

	* DOODLE-TIPS: Add a workaround for Chao-gnus 6.9.
